[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Tiles/CollissionTiles.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tools/TilePropertyPainter.gd" type="Script" id=2]

[sub_resource type="TileSet" id=1]
0/name = "CollissionTiles.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="TilePainter" type="TileMap"]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
script = ExtResource( 2 )

[node name="HighSolid" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_layer = 3840
collision_mask = 3840
format = 1

[node name="LowSolid" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_layer = 240
collision_mask = 240
format = 1

[node name="Background" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="HighTop" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_layer = 256
collision_mask = 256
format = 1

[node name="LowTop" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 16
format = 1

[node name="Top" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1
